--- a/src/components/Board.module.css
+++ b/src/components/Board.module.css
@@ -1,7 +1,7 @@
 .base {
   margin: 0 auto;
   padding: 10px;
-  border: 1px dotted gray;
+  border: 1px solid rgb(187, 185, 185);
   margin: 10px;
   display: flex;
   flex-direction: column;
