--- a/src/components/Tile.module.css
+++ b/src/components/Tile.module.css
@@ -1,11 +1,18 @@
 .tile {
-  font-size: 38px;
   cursor: pointer;
   user-select: none;
   display: inline-block;
-  width: 80px;
-  height: 80px;
-  background-color: rgba(29, 25, 25, 0.123);
-  border-radius: 10%;
   margin: 2px;
+  border-radius: 20%;
+  background-color: rgb(160, 158, 158);
+  box-shadow: 2px 2px 1px rgb(167, 165, 165);
+}
+
+.img {
+  border-radius: inherit;
+}
+
+.tile_closed {
+  composes: tile;
+  cursor: default;
 }
