Add timer and clear game action

--- a/src/components/Tile/Tile.module.css
+++ b/src/components/Tile/Tile.module.css
@@ -12,9 +12,10 @@
 .img {
   border-radius: inherit;
   transform: scale(1.1, 1.1);
+  cursor: not-allowed;
 }
 
-.tile_opened {
+.lockedTile {
   composes: tile;
-  cursor: default;
+  cursor: not-allowed;
 }
